fixed jumping

--- a/css/style.css
+++ b/css/style.css
@@ -203,11 +203,10 @@ form {
 label {
 /*	padding:1em; */
 	font-size:1.2em;
-	line-height: 2em;
-	float:right;
-/*	text-align: right; */
+	float:left;
+	text-align: left; 
 /*	margin-right:20px; */
-/*	width:100px; */
+	min-width:115px; 
 	
 }
 
@@ -240,12 +239,12 @@ textarea {
 	background:#e8e8e8;
 	font-family:'Lora', serif;
 }
-
+/*
 textarea:focus, input:focus, select:focus {
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box;         /* Opera/IE 8+ */
-	border: 2px solid #ffcc00;
+/*	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+/*	box-sizing: border-box;         /* Opera/IE 8+ */
+/*	border: 1px solid #ffcc00;
 	border-radius: 5px;
 	background:#efeeee;
 	font-family:'Lora', serif;
@@ -286,7 +285,7 @@ textarea:focus, input:focus, select:focus {
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
-	width:100%;
+	width:90%;
 	margin:0.5em 0;
 
 }
